==> Team2VinUniNQD/qtr-sensors-arduino/QTRSensors.cpp <==
#include "QTRSensors.h"
#include <Arduino.h>

void QTRSensors::setEmitterPin(uint8_t emitterPin) {
    releaseEmitterPins();

    _oddEmitterPin = emitterPin;
    pinMode(_oddEmitterPin, OUTPUT);

    _emitterPinCount = 1;
}

void QTRSensors::setEmitterPins(uint8_t oddEmitterPin, uint8_t evenEmitterPin) {
    releaseEmitterPins();

    _oddEmitterPin = oddEmitterPin;
    _evenEmitterPin = evenEmitterPin;
    pinMode(_oddEmitterPin, OUTPUT);
    pinMode(_evenEmitterPin, OUTPUT);

    _emitterPinCount = 2;
}

void QTRSensors::releaseEmitterPins() {
    if (_oddEmitterPin != QTRNoEmitterPin) {
        pinMode(_oddEmitterPin, INPUT);
        _oddEmitterPin = QTRNoEmitterPin;
    }

    if (_evenEmitterPin != QTRNoEmitterPin) {
        pinMode(_evenEmitterPin, INPUT);
        _evenEmitterPin = QTRNoEmitterPin;
    }

    _emitterPinCount = 0;
}

void QTRSensors::emittersOff(QTREmitters emitters, bool wait) {
    bool pinChanged = false;

    // Use odd emitter pin in these cases:
    // - 1 emitter pin, emitters = all
    // - 2 emitter pins, emitters = all
    // - 2 emitter pins, emitters = odd
    if (emitters == QTREmitters::All ||
        (_emitterPinCount == 2 && emitters == QTREmitters::Odd)) {
        // Check if pin is defined and only turn off if not already off
        if ((_oddEmitterPin != QTRNoEmitterPin) &&
            (digitalRead(_oddEmitterPin) == HIGH)) {
            digitalWrite(_oddEmitterPin, LOW);
            pinChanged = true;
        }
    }

    // Use even emitter pin in these cases:
    // - 2 emitter pins, emitters = all
    // - 2 emitter pins, emitters = even
    if (_emitterPinCount == 2 &&
        (emitters == QTREmitters::All || emitters == QTREmitters::Even)) {
        // Check if pin is defined and only turn off if not already off
        if ((_evenEmitterPin != QTRNoEmitterPin) &&
            (digitalRead(_evenEmitterPin) == HIGH)) {
            digitalWrite(_evenEmitterPin, LOW);
            pinChanged = true;
        }
    }

    if (wait && pinChanged) {
        if (_dimmable) {
            // driver min is 1 ms
            delayMicroseconds(1200);
        } else {
            delayMicroseconds(200);
        }
    }
}

void QTRSensors::emittersOn(QTREmitters emitters, bool wait) {
    bool pinChanged = false;
    uint16_t emittersOnStart;

    // Use odd emitter pin in these cases:
    // - 1 emitter pin, emitters = all
    // - 2 emitter pins, emitters = all
    // - 2 emitter pins, emitters = odd
    if (emitters == QTREmitters::All ||
        (_emitterPinCount == 2 && emitters == QTREmitters::Odd)) {
        // Check if pin is defined, and only turn on non-dimmable sensors if not
        // already on, but always turn dimmable sensors off and back on because
        // we might be changing the dimming level (emittersOnWithPin() should take
        // care of this)
        if ((_oddEmitterPin != QTRNoEmitterPin) &&
            (_dimmable || (digitalRead(_oddEmitterPin) == LOW))) {
            emittersOnStart = emittersOnWithPin(_oddEmitterPin);
            pinChanged = true;
        }
    }

    // Use even emitter pin in these cases:
    // - 2 emitter pins, emitters = all
    // - 2 emitter pins, emitters = even
    if (_emitterPinCount == 2 &&
        (emitters == QTREmitters::All || emitters == QTREmitters::Even)) {
        // Check if pin is defined, and only turn on non-dimmable sensors if not
        // already on, but always turn dimmable sensors off and back on because
        // we might be changing the dimming level (emittersOnWithPin() should take
        // care of this)
        if ((_evenEmitterPin != QTRNoEmitterPin) &&
            (_dimmable || (digitalRead(_evenEmitterPin) == LOW))) {
            emittersOnStart = emittersOnWithPin(_evenEmitterPin);
            pinChanged = true;
        }
    }

    if (wait && pinChanged) {
        if (_dimmable) {
            // Make sure it's been at least 300 us since the emitter pin was first set
            // high before returning. (Driver min is 250 us.) Some time might have
            // already passed while we set the dimming level.
            while ((uint16_t)(micros() - emittersOnStart) < 300) {
                delayMicroseconds(10);
            }
        } else {
            delayMicroseconds(200);
        }
    }
}

uint16_t QTRSensors::emittersOnWithPin(uint8_t pin) {
    if (_dimmable && (digitalRead(pin) == HIGH)) {
        // We are turning on dimmable emitters that are already on. To avoid messing
        // up the dimming level, we have to turn the emitters off and back on. This
        // means the turn-off delay will happen even if wait = false was passed to
        // emittersOn(). (Driver min is 1 ms.)
        digitalWrite(pin, LOW);
        delayMicroseconds(1200);
    }

    digitalWrite(pin, HIGH);
    uint16_t emittersOnStart = micros();

    if (_dimmable && (_dimmingLevel > 0)) {
        noInterrupts();

        for (uint8_t i = 0; i < _dimmingLevel; i++) {
            delayMicroseconds(1);
            digitalWrite(pin, LOW);
            delayMicroseconds(1);
            digitalWrite(pin, HIGH);
        }

        interrupts();
    }

    return emittersOnStart;
}

void QTRSensors::emittersSelect(QTREmitters emitters) {
    QTREmitters offEmitters;

    switch (emitters) {
    case QTREmitters::Odd:
        offEmitters = QTREmitters::Even;
        break;

    case QTREmitters::Even:
        offEmitters = QTREmitters::Odd;
        break;

    case QTREmitters::All:
        emittersOn();
        return;

    case QTREmitters::None:
        emittersOff();
        return;

    default:  // invalid
        return;
    }

    // Turn off the off-emitters; don't wait before proceeding, but record the time.
    emittersOff(offEmitters, false);
    uint16_t turnOffStart = micros();

    // Turn on the on-emitters and wait.
    emittersOn(emitters);

    if (_dimmable) {
        // Finish waiting for the off-emitters emitters to turn off: make sure it's been
        // at least 1200 us since the off-emitters was turned off before returning.
        // (Driver min is 1 ms.) Some time has already passed while we waited for
        // the on-emitters to turn on.
        while ((uint16_t)(micros() - turnOffStart) < 1200) {
            delayMicroseconds(10);
        }
    }
}

void QTRSensors::readPrivate(uint16_t *sensorValues, uint8_t start, uint8_t step) {
    if (_sensorPins == nullptr) {
        return;
    }

    switch (_type) {
    case QTRType::RC:
#if defined(__LINEFOLLOWINGROBOT__)
        for (uint8_t i = start; i < _sensorCount; i += 1) {
            sensorValues[i] = _maxValue;
        }
        // set pin as output
        DDRB |= PB_MASK;
        DDRC |= PC_MASK;
        DDRD |= PD_MASK;
        // set all pin to high
        PORTB |= PB_MASK;
        PORTC |= PC_MASK;
        PORTD |= PD_MASK;
#else
        for (uint8_t i = start; i < _sensorCount; i += step) {
            sensorValues[i] = _maxValue;
            // make sensor line an output (drives low briefly, but doesn't matter)
            pinMode(_sensorPins[i], OUTPUT);
            // drive sensor line high
            digitalWrite(_sensorPins[i], HIGH);
        }
#endif
        delayMicroseconds(10);  // charge lines for 10 us

        {
            // disable interrupts so we can switch all the pins as close to the same
            // time as possible
            noInterrupts();

            // record start time before the first sensor is switched to input
            // (similarly, time is checked before the first sensor is read in the
            // loop below)
            uint32_t startTime = micros();
            uint16_t time = 0;
#if defined(__LINEFOLLOWINGROBOT__)
            DDRB &= ~PB_MASK;
            DDRC &= ~PC_MASK;
            DDRD &= ~PD_MASK;
            PORTB &= ~PB_MASK;
            PORTC &= ~PC_MASK;
            PORTD &= ~PD_MASK;
#else
            for (uint8_t i = start; i < _sensorCount; i += step) {
                // make sensor line an input (should also ensure pull-up is disabled)
                pinMode(_sensorPins[i], INPUT);
            }
#endif
            interrupts();  // re-enable

            while (time < _maxValue) {
                // disable interrupts so we can read all the pins as close to the same
                // time as possible
                noInterrupts();

                time = micros() - startTime;
                for (uint8_t i = start; i < _sensorCount; i += step) {
                    if ((digitalRead(_sensorPins[i]) == LOW) && (time < sensorValues[i])) {
                        // record the first time the line reads low
                        sensorValues[i] = time;
                    }
                }

                interrupts();  // re-enable
            }
        }
        return;

    case QTRType::Analog:
        // reset the values
        for (uint8_t i = start; i < _sensorCount; i += step) {
            sensorValues[i] = 0;
        }

        for (uint8_t j = 0; j < _samplesPerSensor; j++) {
            for (uint8_t i = start; i < _sensorCount; i += step) {
                // add the conversion result
                sensorValues[i] += analogRead(_sensorPins[i]);
            }
        }

        // get the rounded average of the readings for each sensor
        for (uint8_t i = start; i < _sensorCount; i += step) {
            sensorValues[i] = (sensorValues[i] + (_samplesPerSensor >> 1)) /
                              _samplesPerSensor;
        }
        return;

    default:  // QTRType::Undefined or invalid - do nothing
        return;
    }
}
