==> Tamandutech/LineFollower_SemrehV2_Code/Downloads/LineFollower_SemrehV2_Code-delete-blink/lib/qtr-sensors/QTRSensors.cpp <==
#include "QTRSensors.h"

void QTRSensors::setEmitterPin(uint8_t emitterPin)
{
  releaseEmitterPins();

  _oddEmitterPin = emitterPin;
  gpio_set_direction((gpio_num_t)_oddEmitterPin, GPIO_MODE_INPUT_OUTPUT);

  _emitterPinCount = 1;
}

void QTRSensors::setEmitterPins(uint8_t oddEmitterPin, uint8_t evenEmitterPin)
{
  releaseEmitterPins();

  _oddEmitterPin = oddEmitterPin;
  _evenEmitterPin = evenEmitterPin;
  gpio_set_direction((gpio_num_t)_oddEmitterPin, GPIO_MODE_INPUT_OUTPUT);
  gpio_set_direction((gpio_num_t)_evenEmitterPin, GPIO_MODE_INPUT_OUTPUT);

  _emitterPinCount = 2;
}

void QTRSensors::releaseEmitterPins()
{
  if (_oddEmitterPin != QTRNoEmitterPin)
  {
    gpio_set_direction((gpio_num_t)_oddEmitterPin, GPIO_MODE_INPUT_OUTPUT);
    _oddEmitterPin = QTRNoEmitterPin;
  }

  if (_evenEmitterPin != QTRNoEmitterPin)
  {
    gpio_set_direction((gpio_num_t)_evenEmitterPin, GPIO_MODE_INPUT_OUTPUT);
    _evenEmitterPin = QTRNoEmitterPin;
  }

  _emitterPinCount = 0;
}

void QTRSensors::emittersOff(QTREmitters emitters, bool wait)
{
  bool pinChanged = false;

  // Use odd emitter pin in these cases:
  // - 1 emitter pin, emitters = all
  // - 2 emitter pins, emitters = all
  // - 2 emitter pins, emitters = odd
  if (emitters == QTREmitters::All ||
      (_emitterPinCount == 2 && emitters == QTREmitters::Odd))
  {
    // Check if pin is defined and only turn off if not already off
    if ((_oddEmitterPin != QTRNoEmitterPin) &&
        gpio_get_level((gpio_num_t)_oddEmitterPin) == 1)
    {
      gpio_set_level((gpio_num_t)_oddEmitterPin, 0);
      pinChanged = true;
    }
  }

  // Use even emitter pin in these cases:
  // - 2 emitter pins, emitters = all
  // - 2 emitter pins, emitters = even
  if (_emitterPinCount == 2 &&
      (emitters == QTREmitters::All || emitters == QTREmitters::Even))
  {
    // Check if pin is defined and only turn off if not already off
    if ((_evenEmitterPin != QTRNoEmitterPin) &&
        gpio_get_level((gpio_num_t)_evenEmitterPin) == 1)
    {
      gpio_set_level((gpio_num_t)_evenEmitterPin, 0);
      pinChanged = true;
    }
  }

  if (wait && pinChanged)
  {
    if (_dimmable)
    {
      // driver min is 1 ms
      vTaskDelay(1.2 / portTICK_PERIOD_MS);
    }
    else
    {
      vTaskDelay(0.2 / portTICK_PERIOD_MS);
    }
  }
}

void QTRSensors::emittersOn(QTREmitters emitters, bool wait)
{
  bool pinChanged = false;
  uint16_t emittersOnStart = 0;

  // Use odd emitter pin in these cases:
  // - 1 emitter pin, emitters = all
  // - 2 emitter pins, emitters = all
  // - 2 emitter pins, emitters = odd
  if (emitters == QTREmitters::All ||
      (_emitterPinCount == 2 && emitters == QTREmitters::Odd))
  {
    // Check if pin is defined, and only turn on non-dimmable sensors if not
    // already on, but always turn dimmable sensors off and back on because
    // we might be changing the dimming level (emittersOnWithPin() should take
    // care of this)
    if ((_oddEmitterPin != QTRNoEmitterPin) &&
        (_dimmable || gpio_get_level((gpio_num_t)_oddEmitterPin) == 0))
    {
      emittersOnStart = emittersOnWithPin(_oddEmitterPin);
      pinChanged = true;
    }
  }

  // Use even emitter pin in these cases:
  // - 2 emitter pins, emitters = all
  // - 2 emitter pins, emitters = even
  if (_emitterPinCount == 2 &&
      (emitters == QTREmitters::All || emitters == QTREmitters::Even))
  {
    // Check if pin is defined, and only turn on non-dimmable sensors if not
    // already on, but always turn dimmable sensors off and back on because
    // we might be changing the dimming level (emittersOnWithPin() should take
    // care of this)
    if ((_evenEmitterPin != QTRNoEmitterPin) &&
        (_dimmable || (gpio_get_level((gpio_num_t)_evenEmitterPin) == 0)))
    {
      emittersOnStart = emittersOnWithPin(_evenEmitterPin);
      pinChanged = true;
    }
  }

  if (wait && pinChanged)
  {
    if (_dimmable)
    {
      // Make sure it's been at least 300 us since the emitter pin was first
      // set high before returning. (Driver min is 250 us.) Some time might
      // have already passed while we set the dimming level.
      while ((uint16_t)(esp_timer_get_time() - emittersOnStart) < 300)
      {
        vTaskDelay(0.001 / portTICK_PERIOD_MS);
      }
    }
    else
    {
      vTaskDelay(0.02 / portTICK_PERIOD_MS);
    }
  }
}

uint16_t QTRSensors::emittersOnWithPin(uint8_t pin)
{
  if (_dimmable && (gpio_get_level((gpio_num_t)pin) == 1))
  {
    // We are turning on dimmable emitters that are already on. To avoid
    // messing up the dimming level, we have to turn the emitters off and back
    // on. This means the turn-off delay will happen even if wait = false was
    // passed to emittersOn(). (Driver min is 1 ms.)
    gpio_set_level((gpio_num_t)pin, 0);
    vTaskDelay(1.2 / portTICK_PERIOD_MS);
  }

  gpio_set_level((gpio_num_t)pin, 1);
  uint16_t emittersOnStart = esp_timer_get_time();

  if (_dimmable && (_dimmingLevel > 0))
  {
    for (uint8_t i = 0; i < _dimmingLevel; i++)
    {
      vTaskDelay(0.001 / portTICK_PERIOD_MS);
      gpio_set_level((gpio_num_t)pin, 0);
      vTaskDelay(0.001 / portTICK_PERIOD_MS);
      gpio_set_level((gpio_num_t)pin, 1);
    }
  }

  return emittersOnStart;
}

void QTRSensors::emittersSelect(QTREmitters emitters)
{
  QTREmitters offEmitters;

  switch (emitters)
  {
  case QTREmitters::Odd:
    offEmitters = QTREmitters::Even;
    break;

  case QTREmitters::Even:
    offEmitters = QTREmitters::Odd;
    break;

  case QTREmitters::All:
    emittersOn();
    return;

  case QTREmitters::None:
    emittersOff();
    return;

  default: // invalid
    return;
  }

  // Turn off the off-emitters; don't wait before proceeding, but record the
  // time.
  emittersOff(offEmitters, false);
  uint16_t turnOffStart = esp_timer_get_time();

  // Turn on the on-emitters and wait.
  emittersOn(emitters);

  if (_dimmable)
  {
    // Finish waiting for the off-emitters emitters to turn off: make sure
    // it's been at least 1200 us since the off-emitters was turned off before
    // returning. (Driver min is 1 ms.) Some time has already passed while we
    // waited for the on-emitters to turn on.
    while ((uint16_t)(esp_timer_get_time() - turnOffStart) < 1200)
    {
      vTaskDelay(0.001 / portTICK_PERIOD_MS);
    }
  }
}

void QTRSensors::readPrivate(uint16_t *sensorValues, uint8_t start,
                             uint8_t step)
{
  if (_sensorPins == nullptr && _sensorPinsESP == nullptr)
  {
    return;
  }

  switch (_type)
  {
  case QTRType::RC:
    for (uint8_t i = start; i < _sensorCount; i += step)
    {
      sensorValues[i] = _maxValue;
      // make sensor line an output (drives low briefly, but doesn't matter)
      gpio_set_direction((gpio_num_t)_sensorPins[i], GPIO_MODE_INPUT_OUTPUT);
      // drive sensor line high
      gpio_set_level((gpio_num_t)_sensorPins[i], 1);
    }

    vTaskDelay(0.001 / portTICK_PERIOD_MS);

    {
      // disable interrupts so we can switch all the pins as close to the same
      // time as possible

      // record start time before the first sensor is switched to input
      // (similarly, time is checked before the first sensor is read in the
      // loop below)
      uint32_t startTime = esp_timer_get_time();
      uint16_t time = 0;

      for (uint8_t i = start; i < _sensorCount; i += step)
      {
        // make sensor line an input (should also ensure pull-up is disabled)
        gpio_set_direction((gpio_num_t)_sensorPins[i], GPIO_MODE_INPUT_OUTPUT);
      }

      while (time < _maxValue)
      {
        // disable interrupts so we can read all the pins as close to the same
        // time as possible

        time = esp_timer_get_time() - startTime;
        for (uint8_t i = start; i < _sensorCount; i += step)
        {
          if ((gpio_get_level((gpio_num_t)_sensorPins[i]) == 0) &&
              (time < sensorValues[i]))
          {
            // record the first time the line reads low
            sensorValues[i] = time;
          }
        }
      }
    }
    return;

  case QTRType::Analog:
    // reset the values
    for (uint8_t i = start; i < _sensorCount; i += step)
    {
      sensorValues[i] = 0;
    }

    for (uint8_t j = 0; j < _samplesPerSensor; j++)
    {
      for (uint8_t i = start; i < _sensorCount; i += step)
      {
        // add the conversion result
        sensorValues[i] += adc1_get_raw((adc1_channel_t)_sensorPins[i]);
      }
    }

    // get the rounded average of the readings for each sensor
    for (uint8_t i = start; i < _sensorCount; i += step)
    {
      sensorValues[i] =
          (sensorValues[i] + (_samplesPerSensor >> 1)) / _samplesPerSensor;
    }
    return;

  case QTRType::AnalogESP:
    // reset the values
    for (uint8_t i = start; i < _sensorCount; i += step)
    {
      sensorValues[i] = 0;
    }

    for (uint8_t j = 0; j < _samplesPerSensor; j++)
    {
      for (uint8_t i = start; i < _sensorCount; i += step)
      {
        // add the conversion result
        sensorValues[i] += adc1_get_raw(_sensorPinsESP[i]);
      }
    }

    // get the rounded average of the readings for each sensor
    for (uint8_t i = start; i < _sensorCount; i += step)
    {
      sensorValues[i] =
          (sensorValues[i] + (_samplesPerSensor >> 1)) / _samplesPerSensor;
    }
    return;

  case QTRType::MCP3008:
    // reset the values
    for (uint8_t i = start; i < _sensorCount; i += step)
    {
      sensorValues[i] = 0;
    }

    for (uint8_t j = 0; j < _samplesPerSensor; j++)
    {
      for (uint8_t i = start; i < _sensorCount; i += step)
      {
        // add the conversion result
        sensorValues[i] += ls.readChannel(_sensorPins[i]);
      }
    }

    // get the rounded average of the readings for each sensor
    for (uint8_t i = start; i < _sensorCount; i += step)
    {
      sensorValues[i] =
          (sensorValues[i] + (_samplesPerSensor >> 1)) / _samplesPerSensor;
    }
    return;

  default: // QTRType::Undefined or invalid - do nothing
    return;
  }
}
